# azul-box

./: .gitignore  Cargo.toml  README.md  install.sh
bin-script/: azul_box.desktop  install.sh
desktop/: azul_box.desktop
src/: main.rs
src/dl/: b_music.rs  b_video.rs  mod.rs
src/themes/: catdark.rs  catlight.rs  mod.rs
src/ui/: colors.rs  img_convert.rs  mod.rs  music.rs  music_dl.rs  pinterest.rs  video.rs  video_convert.rs  video_dl.rs
src/ui/shares/: config.rs  lang.rs  lrclib.rs  mod.rs  musicbrainz.rs  notify.rs  version_check.rs  yt_dlp_bin.rs
