[package]
name = "azul-box"
authors = ["musdx", "https://github.com/musdx/azul-box"]
version = "0.1.71"
edition = "2024"
description = "A utility box for ffmpeg, yt-dlp, and more"
license = "GNU GENERAL PUBLIC LICENSE Version 3"
license-file = "LICENSE"
readme = "README.md"
homepage = "https://github.com/musdx/azul-box"
repository = "https://github.com/musdx/azul-box"

[package.metadata.deb]
assets = [
    [
        "target/release/azul-box",
        "/usr/bin/azulbox",
        "755",
    ],
    [
        "desktop/azul_box.desktop",
        "/usr/share/applications/azul_box.desktop",
        "644",
    ],
    [
        "assets/logo.png",
        "/usr/share/icons/azul_box.png",
        "644",
    ],
]

[dependencies]
dirs = "6.0.0"
eframe = "0.31.1"
egui-toast = "0.17.0"
lofty = "0.22.4"
native-dialog = "0.9.0"
notify-rust = "4.11.7"
rodio = "0.20.1"
scraper = "0.23.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["rt", "macros", "rt-multi-thread"] }
toml = "0.9.0"
ureq = { version = "3.0.11", features = ["json"] }
url = "2.5.4"
